<resources>
    <string name="app_name">Attendance Assistant</string>
    <string name="title_activity_maps">Map</string>
    <string name="homeLoc">Home Location</string>
    <string name="clgLoc">College Location</string>
    <string name="locationAddressTV">Fetching GPS location ...</string>
    <string name="confirmBtn">Confirm Location</string>
    <string name="action_done">Done</string>
    <string name="date">Date</string>
    <string name="classes_present">Classes Present</string>
    <string name="total_classes">Total Classes</string>
    <string name="title_activity_attendance_catalog">AttendanceCatalog</string>
    <string name="settings">Settings</string>
    <string name="update_attendance">Update Attendance</string>
    <string name="batchupdate">Batch Update</string>
    <string name="daily_attendance">Daily Attendance</string>
    <string name="no_attendance_updated">You didn\'t update any attendance yet\n Click here and start updating</string>
    <string name="_0">0</string>
    <string name="from_date">From Date</string>
    <string name="set_from_date">Set From Date</string>
    <string name="to_date">To Date</string>
    <string name="set_to_date">Set To Date</string>
    <string name="present_classes">Classes Attended</string>
    <string name="_10">10</string>
    <string name="extra_info">Extra Info</string>
    <string name="optional">(Optional)</string>
    <string name="view_nattendance">View Attendance</string>
    <string name="update_as_batch">Update as Batch</string>
    <string name="set_loaction">Set Location</string>
    <string name="click_to_set_date">Click to set Date</string>
    <string name="from">From:</string>
    <string name="dd_mm_yyyy">dd MMM, yy</string>
    <string name="to">to</string>
    <string name="present">Attended:</string>
    <string name="total">Total:</string>
    <string name="datee">Date:</string>
    <string name="choose_option">Choose Option</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="batch_attendance">Batch Attendance</string>
</resources>
